src/components/FoodSection/FoodSection.module.scss
.wrapper {
  position: relative;
}

.sticky {
  position: sticky;
  top: 10rem;
}

.cards_section {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: rem(97px);
  flex-wrap: nowrap;
  padding-left: rem(165px);
  padding-right: rem(165px);
  height: calc(100vh - 16rem);
  width: max-content;
  will-change: transform;
}

.cards_section_overflow {
  overflow: hidden;
  width: 100vw;
}

.small_card {
  width: rem(523px);
  position: relative;
  padding: 76px 0px;
  overflow: hidden;
  height: rem(650px);
  max-height: rem(650px);
  flex-shrink: 0;
}

.image_container {
  width: rem(397px);
  border-radius: 20px;
  overflow: hidden;
  transform: translateY(0%);
  transition: 0.4s ease-in-out 0.4s;
  margin: 0 auto;
  left: 0;
  right: 0;
  height: rem(397px);
  display: flex;
  align-items: flex-start;
  justify-content: center;
}

.small_card_img {
  width: 110%;
  position: absolute;
}

.small_card_title {
  margin-top: rem(38px);
  margin-left: rem(70px);
  font-weight: 900;
  line-height: 1.1;
  font-family: var(--Poppins);
  user-select: none;
  font-size: rem(38px);
  transform: translateY(0%);
  transition: 0.4s ease-in-out 0.4s;
}

.food_list {
  position: absolute;
  margin-left: rem(70px);
  margin-right: rem(70px);
  top: 60%;
  opacity: 0;
  transition: 0.4s ease-in-out 0s;
  font-family: var(--Roboto);
  user-select: none;
  font-size: rem(24px);
}

.centered {
  .image_container {
    transform: translateY(-30%);
    width: 100%;
    height: 60%;
    transition-delay: 0s;
  }

  .small_card_title {
    transform: translateY(-230%);
    transition-delay: 0s;
  }

  .food_list {
    opacity: 1;
    transition: 0.4s ease-in-out 0.4s;
  }
}

